Mon Jan 12 00:46:14 CET 2009 Guido Günther <agx@sigxcpu.org>

	* update NEWS 

Mon Jan 12 00:36:45 CET 2009 Guido Günther <agx@sigxcpu.org>

	move icons to $(datadir)/krb5-auth-dialog to fix missing tray icon
	when prefix != /usr
	* icons/Makefile.am (smallicondir): move to $(pkgdatadir)
	* src/Makefile.am: rename glade_DATA to pkgdata_DATA, GLADEDIR to
	  KA_DATA_DIR
	* src/krb5-auth-applet.c (ka_create_tray_icon): extend icon search
	  path by $(KA_DATA_DIR)/icons
	* src/krb5-auth-dialog.c (main): use $(KA_DATA_DIR)

Sun Jan 11 22:59:34 CET 2009 Guido Günther <agx@sigxcpu.org>

	* AUTHORS, MAINTAINERS: add myself 

Sat Jan 10 15:37:58 CET 2009 Guido Günther <agx@sigxcpu.org>

	* configure.ac: release 0.8

Fri Jan  9 21:38:39 CET 2009 Guido Günther <agx@sigxcpu.org>

	* configure.ac: add German translation

Fri Jan  9 21:37:46 CET 2009 Guido Günther <agx@sigxcpu.org>

	intltool-*.in not contained in this package
	* Makefile.am: remove intltool-*.in 

Fri Jan  9 21:35:24 CET 2009 Guido Günther <agx@sigxcpu.org>

	add missing files that contain translations
	* po/POTFILES.in: add missing C files
	* po/POTFILES.skip: don't worry about etpo/

Fri Jan  9 21:30:56 CET 2009 Guido Günther <agx@sigxcpu.org>

	* src/Makefile.am (EXTRA_DIST): fix schema_in_files typo

Sun Jan  4 16:58:17 CET 2009 Guido Günther <agx@sigxcpu.org>

	add gconf schema
	*  src/Makefile.am: process, install and cleanup schema file
	*  src/krb5-auth-dialog.schemas.in: new file

Sun Jan  4 16:51:33 CET 2009 Guido Günther <agx@sigxcpu.org>

	move HAVE_LIBNOTIFY check into krb5-auth-notify.c and simplify
	ka_status_update
	* src/krb5-auth-applet.c (ka_tooltip_text): new function
	  (ka_select_icon): new function
	  (ka_update_status): drop urgency, use ka_tooltip_text and
	  ka_select_icon
	* src/krb5-auth-notify.c (ka_send_event_notification): define
	  empty function when building without libnotify
	* src/krb5-auth-notify.h: don't include notify.h
